--- a/dashboard.html
+++ b/dashboard.html
@@ -131,6 +131,8 @@
         </div>
       </div>
 
+      <!-- This is a one-line comment -->
+
       <footer>
         © 2025 Smile Clinic • Auto-refresh every 15s • Made with ❤️
       </footer>
