--- a/dashboard.html
+++ b/dashboard.html
@@ -485,6 +485,7 @@
             </div>
           </div>
         </div>
+        <!-- This is a one-line comment -->
 
         <div class="table-container">
           <table id="tbl">
