--- a/dashboard.html
+++ b/dashboard.html
@@ -406,6 +406,8 @@
       </div>
     </div>
 
+    <!-- Login Screen -->
+
     <!-- Dashboard Content (Hidden until login) -->
     <div id="dashboardContent" style="display: none">
       <header>
