--- a/dashboard.html
+++ b/dashboard.html
@@ -407,6 +407,7 @@
     </div>
 
     <!-- Login Screen -->
+      <!-- Login Screen -->
 
     <!-- Dashboard Content (Hidden until login) -->
     <div id="dashboardContent" style="display: none">
