--- a/dashboard.html
+++ b/dashboard.html
@@ -566,6 +566,7 @@
       }
 
       // Auto-hide login if already logged in
+      // auto
       // Auto-hide login if already logged in
       if (localStorage.getItem("clinic_logged_in") === "true") {
         document.getElementById("loginScreen").style.display = "none";
