--- a/dashboard.html
+++ b/dashboard.html
@@ -566,7 +566,7 @@
       }
 
       // Auto-hide login if already logged in
-      // auto
+      // autoo
       // Auto-hide login if already logged in
       if (localStorage.getItem("clinic_logged_in") === "true") {
         document.getElementById("loginScreen").style.display = "none";
