--- a/dashboard.html
+++ b/dashboard.html
@@ -2,9 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Clinic Dashboard</title>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Fillow Dashboard</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+    />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.4.1/chart.umd.min.js"></script>
     <style>
       /* RESET */
       * {
@@ -338,468 +342,104 @@
     </style>
   </head>
   <body>
-    <!-- Login Screen -->
-    <div id="loginScreen">
-      <div id="loginBox">
-        <h2>🔐 Admin Login</h2>
-        <input type="email" id="email" placeholder="Admin Email" />
-        <input type="password" id="password" placeholder="Password" />
-        <button onclick="login()">Login</button>
-        <p id="errorMsg">Invalid email or password</p>
+    <aside class="sidebar" id="sidebar">
+      <div class="logo">
+        <i class="fa-solid fa-circle f-icon"></i>
+        <span>Conan.</span>
       </div>
-    </div>
+      <nav class="menu">
+        <a href="#" class="active"
+          ><i class="fa-solid fa-house"></i> Dashboard</a
+        >
+        <a href="#"><i class="fa-solid fa-chart-pie"></i> Analytics</a>
+      </nav>
+    </aside>
 
-    <!-- Dashboard Content (Hidden until login) -->
-    <div id="dashboardContent" style="display: none">
-      <header>
-        <div>
-          <h1>
-            <span>🏥</span>
-            <span>Clinic Dashboard</span>
-          </h1>
-          <p>Real-time Google Sheets sync • Auto-refresh enabled</p>
+    <main class="main-content">
+      <header class="topbar">
+        <div class="left-controls">
+          <button id="menuToggle" class="menu-toggle">
+            <i class="fa-solid fa-bars"></i>
+          </button>
+          <input type="text" placeholder="Search here..." />
         </div>
-        <div class="header-actions">
-          <button id="themeBtn">🌙</button>
-          <button id="logoutBtn" onclick="logout()">🚪 Logout</button>
+        <div class="top-actions">
+          <button id="notifBtn" class="icon-btn">
+            <i class="fa-regular fa-bell"></i>
+            <span class="notif-badge">3</span>
+          </button>
+          <button id="themeToggle" class="icon-btn">
+            <i class="fa-regular fa-moon"></i>
+          </button>
         </div>
       </header>
 
-      <div class="container">
-        <div class="stats">
-          <div class="stat">
-            <div class="stat-icon">📊</div>
-            <h2 id="total">0</h2>
-            <p>Total Bookings</p>
-            <span class="stat-change up" id="totalChange">+12% this week</span>
+      <section class="dashboard-grid">
+        <div class="left-col">
+          <div class="card chart-card">
+            <h3>Project Statistics</h3>
+            <canvas id="barChart"></canvas>
           </div>
-          <div class="stat">
-            <div class="stat-icon">📅</div>
-            <h2 id="today">0</h2>
-            <p>Today's Bookings</p>
-            <span class="stat-change up" id="todayChange"
-              >+5 from yesterday</span
-            >
+
+          <div class="card email-card">
+            <h3>Email Categories</h3>
+            <ul>
+              <li><span class="dot purple"></span> Primary</li>
+              <li><span class="dot blue"></span> Social</li>
+              <li><span class="dot green"></span> Promotions</li>
+            </ul>
           </div>
-          <div class="stat">
-            <div class="stat-icon">⭐</div>
-            <h2 id="popular" style="font-size: 20px">-</h2>
-            <p>Most Popular Service</p>
-            <span class="stat-change up">Trending</span>
-          </div>
-          <div class="stat">
-            <div class="stat-icon">💰</div>
-            <h2 id="revenue">$0</h2>
-            <p>Est. Revenue Today</p>
-            <span class="stat-change up" id="revenueChange">+8.5%</span>
+
+          <div class="card important-card">
+            <h3>Important Projects</h3>
+            <ul>
+              <li>
+                <i class="fa-solid fa-circle-dot"></i> Company Website Redesign
+              </li>
+              <li>
+                <i class="fa-solid fa-circle-dot"></i> App Launch Campaign
+              </li>
+              <li>
+                <i class="fa-solid fa-circle-dot"></i> Internal CRM Upgrade
+              </li>
+            </ul>
           </div>
         </div>
 
-        <div class="analytics-row">
-          <div class="metric-card">
-            <h3>Average Bookings Per Day</h3>
-            <div class="metric-value" id="avgPerDay">0</div>
-          </div>
-          <div class="metric-card">
-            <h3>Peak Hour</h3>
-            <div class="metric-value" id="peakHour">-</div>
-          </div>
-          <div class="metric-card">
-            <h3>This Week</h3>
-            <div class="metric-value" id="thisWeek">0</div>
-          </div>
-        </div>
-
-        <div class="filter-section">
-          <div class="filter-bar">
-            <div class="filter-inputs">
-              <input
-                id="search"
-                placeholder="🔍 Search name, phone, or service..."
-              />
-              <input type="date" id="dateFilter" />
-              <select id="serviceFilter">
-                <option value="">All Services</option>
-              </select>
+        <div class="right-col">
+          <div class="metrics">
+            <div class="metric-card">
+              <h4>Total Clients</h4>
+              <p id="metric1">0</p>
             </div>
-            <div style="display: flex; gap: 10px">
-              <button onclick="downloadCSV()">⬇ Export CSV</button>
-              <button onclick="load()">🔄 Refresh</button>
+            <div class="metric-card">
+              <h4>Total Projects</h4>
+              <p id="metric2">0</p>
+            </div>
+            <div class="metric-card">
+              <h4>Ongoing Tasks</h4>
+              <p id="metric3">0</p>
+            </div>
+            <div class="metric-card">
+              <h4>New Projects</h4>
+              <p id="metric4">0</p>
             </div>
           </div>
-        </div>
 
-        <div class="table-container">
-          <table id="tbl">
-            <thead>
-              <tr>
-                <th onclick="sortTable(0)">Name ↕</th>
-                <th onclick="sortTable(1)">Phone ↕</th>
-                <th onclick="sortTable(2)">Service ↕</th>
-                <th onclick="sortTable(3)">Appointment ↕</th>
-                <th onclick="sortTable(4)">Time ↕</th>
-              </tr>
-            </thead>
-            <tbody></tbody>
-          </table>
-        </div>
-
-        <div class="charts-grid">
-          <div class="chart-card">
-            <div class="chart-title">Service Distribution</div>
-            <canvas id="bar" height="250"></canvas>
-          </div>
-          <div class="chart-card">
-            <div class="chart-title">Booking Breakdown</div>
-            <canvas id="pie" height="250"></canvas>
-          </div>
-          <div class="chart-card">
-            <div class="chart-title">Weekly Trend</div>
-            <canvas id="line" height="250"></canvas>
+          <div class="card donut-card">
+            <h3>Company Profile Website Project</h3>
+            <canvas id="donutChart"></canvas>
+            <p class="progress-text">
+              On Progress <span id="progressVal">70%</span>
+            </p>
           </div>
         </div>
-      </div>
+      </section>
 
-      <footer>
-        © 2025 Smile Clinic • Auto-refresh every 15s • Made with ❤️
-      </footer>
-    </div>
+      <footer>© 2025 Fillow Dashboard — Designed by You 💜</footer>
+    </main>
 
     <script>
-      // ======= SUPABASE LOGIN LOGIC =======
-      const SUPABASE_URL = "https://ylsbmxedhycjqaorjkvm.supabase.co";
-      const SUPABASE_KEY =
-        "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Inlsc2JteGVkaHljanFhb3Jqa3ZtIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjA4MTk5NTUsImV4cCI6MjA3NjM5NTk1NX0.W61xOww2neu6RA4yCJUob66p4OfYcgLSVw3m3yttz1E";
-      const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
-
-      async function login() {
-        const email = document.getElementById("email").value.trim();
-        const password = document.getElementById("password").value.trim();
-
-        const { data, error } = await supabase
-          .from("admin_auth")
-          .select("*")
-          .eq("email", email)
-          .eq("password", password)
-          .maybeSingle();
-
-        if (data) {
-          document.getElementById("loginScreen").style.display = "none";
-          document.getElementById("dashboardContent").style.display = "block";
-          localStorage.setItem("clinic_logged_in", "true");
-          // Initialize dashboard after successful login
-          load();
-        } else {
-          const msg = document.getElementById("errorMsg");
-          msg.style.display = "block";
-          msg.textContent = "Invalid email or password";
-        }
-      }
-
-      function logout() {
-        localStorage.removeItem("clinic_logged_in");
-        document.getElementById("loginScreen").style.display = "flex";
-        document.getElementById("dashboardContent").style.display = "none";
-        document.getElementById("email").value = "";
-        document.getElementById("password").value = "";
-      }
-
-      // Auto-hide login if already logged in
-      if (localStorage.getItem("clinic_logged_in") === "true") {
-        document.getElementById("loginScreen").style.display = "none";
-        document.getElementById("dashboardContent").style.display = "block";
-      }
-
-      // ======= DASHBOARD LOGIC =======
-      let bar, pie, line;
-      let allData = [];
-      let sortDirection = 1;
-      const q = (s) => document.querySelector(s);
-      const animateNum = (el, to) => {
-        let n = 0;
-        const s = to / 40;
-        const i = setInterval(() => {
-          n += s;
-          el.textContent = Math.min(Math.round(n), to);
-          if (n >= to) clearInterval(i);
-        }, 15);
-      };
-
-      async function load() {
-        const res = await fetch("/api/bookings");
-        allData = await res.json();
-        filterAndRender();
-      }
-
-      function filterAndRender() {
-        const s = q("#search").value.toLowerCase();
-        const d = q("#dateFilter").value;
-        const service = q("#serviceFilter").value;
-
-        let data = allData.filter(
-          (b) =>
-            (b.name?.toLowerCase().includes(s) ||
-              b.phone?.includes(s) ||
-              b.service?.toLowerCase().includes(s)) &&
-            (!d || b.timestamp?.startsWith(d)) &&
-            (!service || b.service === service)
-        );
-
-        renderTable(data);
-        updateStats(data);
-        updateAnalytics(data);
-        drawCharts(data);
-        populateServiceFilter();
-      }
-
-      function populateServiceFilter() {
-        const services = [
-          ...new Set(allData.map((b) => b.service).filter(Boolean)),
-        ];
-        const select = q("#serviceFilter");
-        const currentValue = select.value;
-        select.innerHTML = '<option value="">All Services</option>';
-        services.forEach((s) => {
-          const opt = document.createElement("option");
-          opt.value = s;
-          opt.textContent = s;
-          select.appendChild(opt);
-        });
-        select.value = currentValue;
-      }
-
-      function renderTable(d) {
-        const tb = q("#tbl tbody");
-        tb.innerHTML = "";
-        d.forEach((b) => {
-          const r = document.createElement("tr");
-          r.innerHTML = `<td>${b.name || "-"}</td><td>${
-            b.phone || "-"
-          }</td><td>${b.service || "-"}</td><td>${
-            b.appointment || "-"
-          }</td><td>${
-            b.timestamp ? new Date(b.timestamp).toLocaleString() : "-"
-          }</td>`;
-          tb.appendChild(r);
-        });
-      }
-
-      function updateStats(d) {
-        animateNum(q("#total"), d.length);
-        const today = new Date().toISOString().split("T")[0];
-        const todayCount = d.filter((b) =>
-          b.timestamp?.startsWith(today)
-        ).length;
-        animateNum(q("#today"), todayCount);
-
-        const sc = {};
-        d.forEach(
-          (b) => b.service && (sc[b.service] = (sc[b.service] || 0) + 1)
-        );
-        const top = Object.entries(sc).sort((a, b) => b[1] - a[1])[0];
-        q("#popular").textContent = top ? top[0] : "N/A";
-
-        // Simulated revenue (you can replace with actual pricing logic)
-        const revenue = todayCount * 75; // Avg $75 per booking
-        q("#revenue").textContent = "$" + revenue;
-      }
-
-      function updateAnalytics(d) {
-        // Average per day
-        const uniqueDays = new Set(d.map((b) => b.timestamp?.split("T")[0]))
-          .size;
-        const avg = uniqueDays > 0 ? Math.round(d.length / uniqueDays) : 0;
-        q("#avgPerDay").textContent = avg;
-
-        // Peak hour
-        const hours = d
-          .map((b) => {
-            if (!b.timestamp) return null;
-            return new Date(b.timestamp).getHours();
-          })
-          .filter((h) => h !== null);
-
-        if (hours.length > 0) {
-          const hourCounts = {};
-          hours.forEach((h) => (hourCounts[h] = (hourCounts[h] || 0) + 1));
-          const peakHour = Object.entries(hourCounts).sort(
-            (a, b) => b[1] - a[1]
-          )[0];
-          q("#peakHour").textContent = peakHour ? `${peakHour[0]}:00` : "-";
-        } else {
-          q("#peakHour").textContent = "-";
-        }
-
-        // This week
-        const now = new Date();
-        const weekAgo = new Date(now.getTime() - 7 * 24 * 60 * 60 * 1000);
-        const weekCount = d.filter((b) => {
-          if (!b.timestamp) return false;
-          const date = new Date(b.timestamp);
-          return date >= weekAgo && date <= now;
-        }).length;
-        q("#thisWeek").textContent = weekCount;
-      }
-
-      function drawCharts(d) {
-        const sc = {};
-        d.forEach((b) => (sc[b.service] = (sc[b.service] || 0) + 1));
-        const labels = Object.keys(sc);
-        const vals = Object.values(sc);
-
-        if (bar) bar.destroy();
-        if (pie) pie.destroy();
-        if (line) line.destroy();
-
-        bar = new Chart(q("#bar"), {
-          type: "bar",
-          data: {
-            labels,
-            datasets: [
-              {
-                data: vals,
-                backgroundColor: "rgba(6, 208, 1, 0.8)",
-                borderColor: "#06D001",
-                borderWidth: 2,
-                borderRadius: 8,
-              },
-            ],
-          },
-          options: {
-            plugins: { legend: { display: false } },
-            scales: {
-              y: {
-                beginAtZero: true,
-                grid: { color: "rgba(255, 255, 255, 0.1)" },
-                ticks: { color: "#9ca3af" },
-              },
-              x: {
-                grid: { display: false },
-                ticks: { color: "#9ca3af" },
-              },
-            },
-          },
-        });
-
-        pie = new Chart(q("#pie"), {
-          type: "doughnut",
-          data: {
-            labels,
-            datasets: [
-              {
-                data: vals,
-                backgroundColor: [
-                  "#06D001",
-                  "#05a001",
-                  "#04d9d9",
-                  "#fbbf24",
-                  "#f472b6",
-                  "#8b5cf6",
-                ],
-                borderWidth: 0,
-              },
-            ],
-          },
-          options: {
-            plugins: {
-              legend: {
-                position: "bottom",
-                labels: { color: "#9ca3af", padding: 15 },
-              },
-            },
-            cutout: "65%",
-          },
-        });
-
-        // Weekly trend line chart
-        const weekData = getWeeklyData(d);
-        line = new Chart(q("#line"), {
-          type: "line",
-          data: {
-            labels: weekData.labels,
-            datasets: [
-              {
-                label: "Bookings",
-                data: weekData.values,
-                borderColor: "#06D001",
-                backgroundColor: "rgba(6, 208, 1, 0.1)",
-                tension: 0.4,
-                fill: true,
-                pointRadius: 5,
-                pointHoverRadius: 7,
-                pointBackgroundColor: "#06D001",
-              },
-            ],
-          },
-          options: {
-            plugins: {
-              legend: { display: false },
-            },
-            scales: {
-              y: {
-                beginAtZero: true,
-                grid: { color: "rgba(255, 255, 255, 0.1)" },
-                ticks: { color: "#9ca3af" },
-              },
-              x: {
-                grid: { display: false },
-                ticks: { color: "#9ca3af" },
-              },
-            },
-          },
-        });
-      }
-
-      function getWeeklyData(d) {
-        const days = ["Sun", "Mon", "Tue", "Wed", "Thu", "Fri", "Sat"];
-        const counts = [0, 0, 0, 0, 0, 0, 0];
-
-        d.forEach((b) => {
-          if (b.timestamp) {
-            const day = new Date(b.timestamp).getDay();
-            counts[day]++;
-          }
-        });
-
-        return { labels: days, values: counts };
-      }
-
-      function sortTable(col) {
-        const tb = q("#tbl tbody");
-        const rows = Array.from(tb.rows);
-
-        rows.sort((a, b) => {
-          const aVal = a.cells[col].textContent;
-          const bVal = b.cells[col].textContent;
-          return sortDirection * aVal.localeCompare(bVal);
-        });
-
-        sortDirection *= -1;
-        tb.innerHTML = "";
-        rows.forEach((r) => tb.appendChild(r));
-      }
-
-      function downloadCSV() {
-        fetch("/api/bookings")
-          .then((r) => r.json())
-          .then((d) => {
-            const csv = [
-              "Name,Phone,Service,Appointment,Time",
-              ...d.map(
-                (b) =>
-                  `${b.name},${b.phone},${b.service},${b.appointment},${b.timestamp}`
-              ),
-            ].join("\n");
-            const blob = new Blob([csv], { type: "text/csv" });
-            const a = document.createElement("a");
-            a.href = URL.createObjectURL(blob);
-            a.download = `clinic-bookings-${
-              new Date().toISOString().split("T")[0]
-            }.csv`;
-            a.click();
-          });
-      }
-
       // Wait for DOM to be fully loaded
       document.addEventListener("DOMContentLoaded", function () {
         // ===== Sidebar Toggle =====
@@ -942,10 +582,6 @@
           });
         }
       });
-      // Only set up auto-refresh if user is logged in
-      if (localStorage.getItem("clinic_logged_in") === "true") {
-        setInterval(load, 15000);
-      }
     </script>
   </body>
 </html>
