--- a/dashboard.html
+++ b/dashboard.html
@@ -37,18 +37,14 @@
             <i class="fa-solid fa-gauge"></i>
             لوحة القيادة
           </a>
-          <a href="#">
-            <i class="fa-solid fa-table"></i>
-            الجداول
-          </a>
 
           <a href="#">
             <i class="fa-solid fa-bell"></i>
-            الواقع الافتراضي
+            الحجوزات
           </a>
           <a href="#">
             <i class="fa-solid fa-user"></i>
-            حساب تعريفي
+            ارسال رسالة جماعية
           </a>
           <a href="#">
             <i class="fa-solid fa-right-to-bracket"></i>
@@ -56,7 +52,7 @@
           </a>
           <a href="#">
             <i class="fa-solid fa-rocket"></i>
-            اشتراك
+            تحليلات
           </a>
         </nav>
       </aside>
