--- a/dashboard.html
+++ b/dashboard.html
@@ -29,7 +29,7 @@
       <!-- SIDEBAR -->
       <aside class="sidebar" id="sidebar">
         <div class="logo">
-          <span>Soft UI Dashboard</span>
+          <span>CONAN DASHBOARD</span>
         </div>
         <nav class="menu">
           <a href="#" class="active">
@@ -64,7 +64,7 @@
             <button class="menu-toggle icon-btn" id="menuToggle">
               <i class="fa-solid fa-bars"></i>
             </button>
-            <h1>Soft UI Dashboard</h1>
+            <h1>CONAN DASHBOARD</h1>
           </div>
           <div class="header-right">
             <div class="search-box">
