--- a/dashboard.html
+++ b/dashboard.html
@@ -46,7 +46,7 @@
 
           <a href="#">
             <i class="fa-solid fa-bell"></i>
-            الحجوزات
+            التنبيهات
           </a>
           <a href="#">
             <i class="fa-solid fa-user"></i>
