--- a/booking.html
+++ b/booking.html
@@ -42,7 +42,7 @@
             ارسال رسالة جماعية
           </a>
 
-          <a href="#">
+          <a href="analytics.html">
             <i class="fa-solid fa-rocket"></i>
             تحليلات
           </a>
