--- a/dashboard.html
+++ b/dashboard.html
@@ -49,7 +49,7 @@
             التنبيهات
           </a>
 
-          <a href="#">
+          <a href="analytics.html">
             <i class="fa-solid fa-rocket"></i>
             تحليلات
           </a>
