--- a/dashboard.html
+++ b/dashboard.html
@@ -178,28 +178,34 @@
 
           <div class="table-card">
             <h3>جدول الحجوزات</h3>
-            <table id="tbl">
-              <thead>
-                <tr>
-                  <th onclick="sortTable(0)">
-                    الاسم <i class="fas fa-sort"></i>
-                  </th>
-                  <th onclick="sortTable(1)">
-                    الهاتف <i class="fas fa-sort"></i>
-                  </th>
-                  <th onclick="sortTable(2)">
-                    الخدمة <i class="fas fa-sort"></i>
-                  </th>
-                  <th onclick="sortTable(3)">
-                    الموعد <i class="fas fa-sort"></i>
-                  </th>
-                  <th onclick="sortTable(4)">
-                    الوقت <i class="fas fa-sort"></i>
-                  </th>
-                </tr>
-              </thead>
-              <tbody></tbody>
-            </table>
+            <div class="table-wrapper">
+              <table id="tbl">
+                <thead>
+                  <tr>
+                    <th onclick="sortTable(0)">
+                      الاسم <i class="fas fa-sort"></i>
+                    </th>
+
+                    <th onclick="sortTable(1)">
+                      الهاتف <i class="fas fa-sort"></i>
+                    </th>
+
+                    <th onclick="sortTable(2)">
+                      الخدمة <i class="fas fa-sort"></i>
+                    </th>
+
+                    <th onclick="sortTable(3)">
+                      الموعد <i class="fas fa-sort"></i>
+                    </th>
+
+                    <th onclick="sortTable(4)">
+                      الوقت <i class="fas fa-sort"></i>
+                    </th>
+                  </tr>
+                </thead>
+                <tbody></tbody>
+              </table>
+            </div>
           </div>
         </section>
 
